client/my-sites/plans/jetpack-plans/jetpack-complete-page/item-price/style.scss
@import "@wordpress/base-styles/variables";
@import "@wordpress/base-styles/breakpoints";
@import "@wordpress/base-styles/mixins";

.item-price__complete .display-price {
	font-family: Inter, $sans;
	margin-bottom: 32px;

	@include break-medium {
		margin-bottom: 24px;
	}

	.plan-price.is-discounted,
	.plan-price.is-original {

		.plan-price__currency-symbol {
			font-size: $font-title-medium;
			font-weight: 400;
			line-height: 20px;
			margin-top: 0;
		}

		.plan-price__integer {
			font-family: "SF Pro Display", $sans;
			line-height: 40px;
		}

		.plan-price__fraction {
			line-height: $font-title-medium;
			vertical-align: super;
			font-size: 0.75rem;
		}
	}
}

.item-price__complete .display-price:not(.is-placeholder) {
	.plan-price.is-discounted {
		color: var(--studio-gray-100);
	}

	.plan-price.is-original {
		color: var(--studio-gray-20);
	}
}

.display-price__billing-time-frame {
	display: table;
	margin-top: 7px;
}

.item-price__complete .display-price.is-placeholder .plan-price {
	transform: unset;
	transform: none;
}

